--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@remix-run/react": "latest",
     "@sveltejs/kit": "latest",
     "@vercel/analytics": "latest",
+    "appwrite": "^21.3.0",
     "autoprefixer": "^10.4.21",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -52,6 +53,7 @@
     "lucide-react": "^0.544.0",
     "next": "15.5.2",
     "next-themes": "^0.4.6",
+    "node-appwrite": "^20.2.1",
     "react": "^18.3.1",
     "react-day-picker": "9.8.0",
     "react-dom": "^18.3.1",
