--- a/package.json
+++ b/package.json
@@ -38,9 +38,10 @@
     "@radix-ui/react-toggle-group": "1.1.1",
     "@radix-ui/react-tooltip": "1.1.6",
     "@remix-run/react": "latest",
+    "@supabase/ssr": "^0.7.0",
+    "@supabase/supabase-js": "^2.78.0",
     "@sveltejs/kit": "latest",
     "@vercel/analytics": "latest",
-    "appwrite": "^21.3.0",
     "autoprefixer": "^10.4.21",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -53,7 +54,6 @@
     "lucide-react": "^0.544.0",
     "next": "15.5.2",
     "next-themes": "^0.4.6",
-    "node-appwrite": "^20.2.1",
     "react": "^18.3.1",
     "react-day-picker": "9.8.0",
     "react-dom": "^18.3.1",
