--- a/package.json
+++ b/package.json
@@ -72,8 +72,11 @@
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.13",
     "@types/node": "^22.18.1",
+    "@types/pg": "^8.15.6",
     "@types/react": "^18.3.24",
     "@types/react-dom": "^18.3.7",
+    "dotenv": "^17.2.3",
+    "pg": "^8.16.3",
     "postcss": "^8.5.6",
     "tailwindcss": "^4.1.13",
     "tw-animate-css": "1.3.3",
