--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "lucide-react": "^0.544.0",
     "next": "15.5.2",
     "next-themes": "^0.4.6",
+    "nextjs-google-adsense": "^1.0.0",
     "react": "^18.3.1",
     "react-day-picker": "9.8.0",
     "react-dom": "^18.3.1",
