--- a/package.json
+++ b/package.json
@@ -5,8 +5,12 @@
   "scripts": {
     "build": "next build",
     "dev": "next dev",
-    "lint": "next lint",
-    "start": "next start"
+    "start": "next start",
+    "prepare": "husky",
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix",
+    "format": "prettier --write \"**/*.{js,jsx,ts,tsx}\"",
+    "format:check": "prettier --check \"**/*.{js,jsx,ts,tsx}\""
   },
   "dependencies": {
     "@eisberg-labs/next-google-adsense": "^4.0.2",
@@ -80,8 +84,13 @@
     "@types/react": "^18.3.24",
     "@types/react-dom": "^18.3.7",
     "dotenv": "^17.2.3",
+    "eslint": "^9.39.1",
+    "eslint-config-next": "^16.0.1",
+    "eslint-config-prettier": "^10.1.8",
+    "husky": "^9.1.7",
     "pg": "^8.16.3",
     "postcss": "^8.5.6",
+    "prettier": "3.6.2",
     "tailwindcss": "^4.1.13",
     "tw-animate-css": "1.3.3",
     "typescript": "^5.9.2"
