--- a/package.json
+++ b/package.json
@@ -75,6 +75,11 @@
     "vue-router": "latest",
     "zod": "3.25.67"
   },
+  "pnpm": {
+    "overrides": {
+      "tar": "^7.5.9"
+    }
+  },
   "devDependencies": {
     "@snaplet/copycat": "^6.0.0",
     "@snaplet/seed": "0.98.0",
