⬆️ chore: Upgrade Next.js, update various dependencies, configure TypeScript for react-jsx, remove ESLint build ignore, and add Claude local settings.

--- a/package.json
+++ b/package.json
@@ -57,7 +57,7 @@
     "input-otp": "1.4.1",
     "leaflet": "latest",
     "lucide-react": "^0.544.0",
-    "next": "15.5.2",
+    "next": "16.1.6",
     "next-themes": "^0.4.6",
     "nextjs-google-adsense": "^1.0.0",
     "react": "^18.3.1",
@@ -77,7 +77,26 @@
   },
   "pnpm": {
     "overrides": {
-      "tar": "^7.5.9"
+      "tar": "^7.5.9",
+      "cookie@<0.7.0": ">=0.7.0",
+      "vite@>=7.1.0 <=7.1.4": ">=7.1.5",
+      "vite@>=7.1.0 <=7.1.10": ">=7.1.11",
+      "tmp@<=0.2.3": ">=0.2.4",
+      "@remix-run/server-runtime@<=2.17.2": ">=2.17.3",
+      "@remix-run/router@<=1.23.1": ">=1.23.2",
+      "@remix-run/react@<2.17.3": ">=2.17.3",
+      "react-router@>=6.0.0 <6.30.2": ">=6.30.2",
+      "@remix-run/react@>=1.15.0 <=2.17.0": ">=2.17.1",
+      "devalue@>=5.1.0 <5.6.2": ">=5.6.2",
+      "devalue@>=5.3.0 <=5.6.1": ">=5.6.2",
+      "@sveltejs/kit@>=2.19.0 <=2.49.4": ">=2.49.5",
+      "lodash@>=4.0.0 <=4.17.22": ">=4.17.23",
+      "js-yaml@>=4.0.0 <4.1.1": ">=4.1.1",
+      "svelte@<=5.51.4": ">=5.51.5",
+      "devalue@<=5.6.2": ">=5.6.3",
+      "@langchain/core@<0.3.80": ">=0.3.80",
+      "minimatch@<10.2.1": ">=10.2.1",
+      "ajv@<6.14.0": ">=6.14.0"
     }
   },
   "devDependencies": {
