⬆️ chore: Configure Claude local execution permissions, remove unused frontend frameworks, and update various dependency overrides.

--- a/package.json
+++ b/package.json
@@ -42,10 +42,8 @@
     "@radix-ui/react-toggle": "1.1.1",
     "@radix-ui/react-toggle-group": "1.1.1",
     "@radix-ui/react-tooltip": "1.1.6",
-    "@remix-run/react": "latest",
     "@supabase/ssr": "^0.7.0",
     "@supabase/supabase-js": "^2.78.0",
-    "@sveltejs/kit": "latest",
     "@vercel/analytics": "latest",
     "autoprefixer": "^10.4.21",
     "class-variance-authority": "^0.7.1",
@@ -67,36 +65,21 @@
     "react-resizable-panels": "^2.1.9",
     "recharts": "2.15.4",
     "sonner": "^1.7.4",
-    "svelte": "latest",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^0.9.9",
-    "vue": "latest",
-    "vue-router": "latest",
     "zod": "3.25.67"
   },
   "pnpm": {
     "overrides": {
       "tar": "^7.5.9",
       "cookie@<0.7.0": ">=0.7.0",
-      "vite@>=7.1.0 <=7.1.4": ">=7.1.5",
-      "vite@>=7.1.0 <=7.1.10": ">=7.1.11",
-      "tmp@<=0.2.3": ">=0.2.4",
-      "@remix-run/server-runtime@<=2.17.2": ">=2.17.3",
-      "@remix-run/router@<=1.23.1": ">=1.23.2",
-      "@remix-run/react@<2.17.3": ">=2.17.3",
-      "react-router@>=6.0.0 <6.30.2": ">=6.30.2",
-      "@remix-run/react@>=1.15.0 <=2.17.0": ">=2.17.1",
-      "devalue@>=5.1.0 <5.6.2": ">=5.6.2",
-      "devalue@>=5.3.0 <=5.6.1": ">=5.6.2",
-      "@sveltejs/kit@>=2.19.0 <=2.49.4": ">=2.49.5",
+      "vite": ">=7.1.11",
+      "@sveltejs/kit": ">=2.53.3",
+      "tmp": ">=0.2.4",
+      "@langchain/core": ">=0.3.80",
       "lodash@>=4.0.0 <=4.17.22": ">=4.17.23",
-      "js-yaml@>=4.0.0 <4.1.1": ">=4.1.1",
-      "svelte@<=5.51.4": ">=5.51.5",
-      "devalue@<=5.6.2": ">=5.6.3",
-      "@langchain/core@<0.3.80": ">=0.3.80",
-      "minimatch@<10.2.1": ">=10.2.1",
-      "ajv@<6.14.0": ">=6.14.0"
+      "minimatch@<10.2.1": ">=10.2.1"
     },
     "onlyBuiltDependencies": [
       "@prisma/engines",
