--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "format:check": "prettier --check \"**/*.{js,jsx,ts,tsx}\""
   },
   "dependencies": {
+    "@ducanh2912/next-pwa": "^10.2.9",
     "@eisberg-labs/next-google-adsense": "^4.0.2",
     "@hookform/resolvers": "^3.10.0",
     "@radix-ui/react-accordion": "1.2.2",
@@ -106,6 +107,7 @@
     "pg": "^8.16.3",
     "postcss": "^8.5.6",
     "prettier": "3.6.2",
+    "sharp": "^0.34.5",
     "tailwindcss": "^4.1.13",
     "tw-animate-css": "1.3.3",
     "typescript": "^5.9.2"
